# obs_digicamcontrol_plugin

./: CMakeLists.txt  device-camera.cpp  device-camera.hpp  device-jpeg.cpp  device-jpeg.hpp  digicamcontrol-image.cpp  digicamcontrol-source.cpp  digicamcontrol-source.hpp  digicamcontrol.cpp  image.cpp  image.hpp  utils.cpp  utils.hpp
